re PR tree-optimization/43317 (ICE: Segmentation fault with -fipa-struct-reorg -g)

2010-03-15  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43317
	* ipa-struct-reorg.c (create_new_general_access): Update stmt.

	* gcc.dg/pr43317.c: New testcase.

From-SVN: r157457